@@ -1,118 +1,184 @@
 package com.appsdeveloperblog.tutorials.junit.ui.controllers;
 
+import com.appsdeveloperblog.tutorials.junit.security.SecurityConstants;
 import com.appsdeveloperblog.tutorials.junit.ui.response.UserRest;
 import org.json.JSONException;
 import org.json.JSONObject;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.MethodOrderer;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.TestMethodOrder;
+import org.junit.jupiter.api.*;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.web.client.TestRestTemplate;
+import org.springframework.boot.test.web.server.LocalServerPort;
 import org.springframework.core.ParameterizedTypeReference;
-import org.springframework.core.annotation.Order;
 import org.springframework.http.*;
 
+import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
-
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
-//@TestPropertySource(
-//        locations = "/application-test.properties",
+//@TestPropertySource(locations = "/application-test.properties",
 //        properties = "server.port=8081")
+//@TestPropertySource(locations = "/application-test.properties")
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
+@TestInstance(TestInstance.Lifecycle.PER_CLASS)
 public class UsersControllerIntegrationTest {
+
+    @Value("${server.port}")
+    private int serverPort;
+
+    @LocalServerPort
+    private int localServerPort;
 
     @Autowired
     private TestRestTemplate testRestTemplate;
 
+    private String authorizationToken;
+
     @Test
-    @DisplayName("User can be created.")
+    @DisplayName("User can be created")
     @Order(1)
-    void testCreateUser_whenValidDetailsProvided_returnUserDetails() throws JSONException {
-//        Arrange
+    void testCreateUser_whenValidDetailsProvided_returnsUserDetails() throws JSONException {
+        // Arrange
+//        String createUserJson = "{\n" +
+//                "    \"firstName\":\"Robbie\",\n" +
+//                "    \"lastName\":\"Corcoran\",\n" +
+//                "    \"email\":\"test@test.com\",\n" +
+//                "    \"password\":\"12345678\",\n" +
+//                "    \"repeatPassword\":\"12345678\"\n" +
+//                "}";
+
         JSONObject userDetailsRequestJson = new JSONObject();
         userDetailsRequestJson.put("firstName", "Robbie");
         userDetailsRequestJson.put("lastName", "Corcoran");
-        userDetailsRequestJson.put("email", "robbie@robbie.com");
-        userDetailsRequestJson.put("password", "123456789");
-        userDetailsRequestJson.put("repeatPassword", "123456789");
+        userDetailsRequestJson.put("email", "test@test.com");
+        userDetailsRequestJson.put("password", "12345678");
+        userDetailsRequestJson.put("repeatPassword", "12345678");
 
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
-        headers.setAccept(List.of(MediaType.APPLICATION_JSON));
+        headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON));
 
         HttpEntity<String> request = new HttpEntity<>(userDetailsRequestJson.toString(), headers);
 
-//        Act
-        ResponseEntity<UserRest> createdUserDetailsEntity = testRestTemplate.postForEntity(
-                "/users",
+        // Act
+        ResponseEntity<UserRest> createdUserDetailsEntity = testRestTemplate.postForEntity("/users",
                 request,
                 UserRest.class);
         UserRest createdUserDetails = createdUserDetailsEntity.getBody();
 
-//        Assert
-        assertEquals(
+        // Assert
+        Assertions.assertEquals(
                 HttpStatus.OK,
-                createdUserDetailsEntity.getStatusCode(),
-                "createUser did should have returned a 200 status code.");
-        assertEquals(userDetailsRequestJson.getString(
-                        "firstName"),
+                createdUserDetailsEntity.getStatusCode());
+
+        Assertions.assertEquals(
+                userDetailsRequestJson.getString("firstName"),
                 createdUserDetails.getFirstName(),
-                "The User's first name is not correct.");
-        assertFalse(
-                createdUserDetails.getUserId().trim().isEmpty(),
-                "User's ID should not be empty.");
+                "Returned user's first name seems to be incorrect");
+
+        Assertions.assertEquals(
+                userDetailsRequestJson.getString("lastName"),
+                createdUserDetails.getLastName(),
+                "Returned user's last name seems to be incorrect");
+
+        Assertions.assertEquals(userDetailsRequestJson.getString("email"),
+                createdUserDetails.getEmail(),
+                "Returned user's email seems to be incorrect");
+
+        Assertions.assertFalse(createdUserDetails.getUserId().trim().isEmpty(),
+                "User id should not be empty");
+
     }
 
     @Test
-    @DisplayName("GET /users requires JWT.")
+    @DisplayName("GET /users requires JWT")
     @Order(2)
     void testGetUsers_whenMissingJWT_returns403() {
-//        Arrange
+        // Arrange
         HttpHeaders headers = new HttpHeaders();
         headers.set("Accept", "application/json");
 
-        HttpEntity<Object> requestEntity = new HttpEntity<>(null, headers);
+        HttpEntity requestEntity = new HttpEntity(null, headers);
 
-//        Act
-        ResponseEntity<List<UserRest>> response = testRestTemplate.exchange(
-                "/users",
+        // Act
+        ResponseEntity<List<UserRest>> response = testRestTemplate.exchange("/users",
                 HttpMethod.GET,
                 requestEntity,
-                new ParameterizedTypeReference<>() {
+                new ParameterizedTypeReference<List<UserRest>>() {
                 });
 
-//        Assert
-        assertEquals(
+        // Assert
+        Assertions.assertEquals(
                 HttpStatus.FORBIDDEN,
                 response.getStatusCode(),
-                "HttpStatusCode 403 should have been returned.");
+                "HTTP Status code 403 Forbidden should have been returned");
     }
 
     @Test
-    @DisplayName("/login works.")
+    @DisplayName("/login works")
     @Order(3)
     void testUserLogin_whenValidCredentialsProvided_returnsJWTinAuthorizationHeader() throws JSONException {
-//        Arrange
+        // Arrange
+//        String loginCredentialsJson = "{\n" +
+//                "    \"email\":\"test3@test.com\",\n" +
+//                "    \"password\":\"12345678\"\n" +
+//                "}";
         JSONObject loginCredentials = new JSONObject();
-        loginCredentials.put("email", "robbie@robbie.com");
-        loginCredentials.put("password", "123456789");
+        loginCredentials.put("email", "test@test.com");
+        loginCredentials.put("password", "12345678");
 
         HttpEntity<String> request = new HttpEntity<>(loginCredentials.toString());
 
-//        Act
-        ResponseEntity<Object> response = testRestTemplate.postForEntity("/users/login", request, null);
+        // Act
+        ResponseEntity response = testRestTemplate.postForEntity("/users/login",
+                request,
+                null);
+
+        authorizationToken = response.getHeaders().
+                getValuesAsList(SecurityConstants.HEADER_STRING).get(0);
 
         // Assert
-        assertEquals(
+        Assertions.assertEquals(
                 HttpStatus.OK,
                 response.getStatusCode(),
                 "HTTP Status code should be 200");
-        assertNotNull(
+
+        Assertions.assertNotNull(
+                authorizationToken,
+                "Response should contain Authorization header with JWT");
+
+        Assertions.assertNotNull(
                 response.getHeaders().getValuesAsList("UserID").get(0),
                 "Response should contain UserID in a response header");
+    }
+
+    @Test
+    @Order(4)
+    @DisplayName("GET /users works")
+    void testGetUsers_whenValidJWTProvided_returnsUsers() {
+        // Arrange
+        HttpHeaders headers = new HttpHeaders();
+        headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON));
+        headers.setBearerAuth(authorizationToken);
+
+        HttpEntity requestEntity = new HttpEntity(headers);
+
+        // Act
+        ResponseEntity<List<UserRest>> response = testRestTemplate.exchange("/users",
+                HttpMethod.GET,
+                requestEntity,
+                new ParameterizedTypeReference<List<UserRest>>() {
+                });
+
+        // Assert
+        Assertions.assertEquals(
+                HttpStatus.OK,
+                response.getStatusCode(),
+                "HTTP Status code should be 200");
+
+        Assertions.assertTrue(
+                response.getBody().size() == 1,
+                "There should be exactly 1 user in the list");
     }
 }
